# envel-mcp

./: .env.example  .gitignore  README.md  RIGHT_PANEL_PLAN.md  auth_server.py  docker-compose.yml  pyproject.toml  users.example.json
.github/workflows/: ci-cd.yml
apps/auth-server/: pyproject.toml
apps/auth-server/src/envel_auth/: server.py
apps/marketing/: index.html  package-lock.json  package.json  vite.config.ts
apps/marketing/src/: App.tsx  main.tsx  styles.css
apps/marketing/src/components/: AILogos.tsx  ChatMockup.tsx  FeatureCard.tsx  Footer.tsx  LogoMark.tsx  MethodCard.tsx  Navbar.tsx  icons.tsx
apps/marketing/src/pages/: BlogPage.tsx  DocsPage.tsx  HomePage.tsx  NotFoundPage.tsx
apps/platform/server/: pyproject.toml
apps/platform/web/: package-lock.json  package.json  vite.config.ts
mcp/: Dockerfile  alembic.ini  pyproject.toml
mcp/migrations/: env.py
mcp/migrations/versions/: 0001_initial.py  0002_kv_store.py
mcp/rejeki/: database.py  kv_store.py  platform_db.py  schema.sql  server.py
mcp/rejeki/tools/: analytics.py  envelopes.py
platform/backend/: database.py  deps.py  main.py  requirements.txt
platform/backend/routes/: api.py  auth.py
platform/frontend/: index.html  nginx.conf  package.json  vite.config.ts
platform/frontend/src/: App.tsx  api.ts
scripts/: add_user.py  seed_test_user.py
src/rejeki/: auth.py  deps.py  platform_db.py  server.py
src/rejeki/tools/: accounts.py  analytics.py  apps.py  envelopes.py  quick_add.py  scheduled.py  transactions.py
src/rejeki/ui/: budget-allocator.html
(+74 files in other folders)
